--- a/index.html
+++ b/index.html
@@ -5,59 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css"/>
   </head>
-  <body>
-    <header>
-      <nav>
-        <a href="/">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+  <body class="site-body">
+    <header class="header">
+      <nav class="header-navigatio">
+        <a class="logo link" href="./index.html">Web<span class="logo-studio link">Studio</span></a>
+        <ul class="header-list list">
+          <li class="heder-item 
+          "><a class="header-link link" href="">Studio</a></li>
+          <li class="heder-item
+          "><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+          <li class="heder-item
+          "><a class="header-link link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380441111111">+38 044 111 11 11</a>
+      <ul class="contact-list list">
+        <li class="contact-item">
+          <a class="mailto link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="phone link" href="tel:+380441111111">+38 044 111 11 11</a>
+        </li>
+      </ul>
     </header>
     <main>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
-        <section>
-            <h2>What are we doing</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="hero">
+        <ul class="hero-list list">
+          <li class="hero-item">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          </li> 
+           <li class="hero-button">
+             <button type="button" class="hero-btn">Order Service</button>
+           </li> 
+        </ul>
+        <ul class="heading-list list">
+          <li class="heading-item">
+            <h3 class="heading-title">Strategy</h3>
+            <p class="heading-texte">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
-          </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
+            <li>
+              <h3 class="heading-title">Punctuality</h3>
+              <p class="heading-texte">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="heading-title">Diligence</h3>
+              <p class="heading-texte">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="heading-title">Technologies</h3>
+              <p class="heading-texte">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
         </ul>
       </section>
-      <section>
-        <ul>
-          <li>
+      <section class="main">
+        <h2 class="main-title">What are we doing</h2>
+        <ul class="main-list list">
+          <li class="item">
             <img
               src="./images/comp.jpg"
               alt="computer"
@@ -65,10 +84,10 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="item">
             <img src="./images/tel.jpg" alt="phone" width="360" height="300" />
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/computer-tel.jpg"
               alt="computer with phone"
@@ -78,50 +97,53 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="body">
+        <h2 class="body-title">Our Team</h2>
+        <ul class="body-list list">
+          <li class="body-item">
             <img src="./images/mark.jpg" alt="man" width="264" height="260" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-        </li>
-          <li>
+            <h3 class="body-new-title">Mark Guerrero</h3>
+            <p class="body-new-text">Product Designer</p>
+          </li>
+          <li class="body-item">
             <img
               src="./images/tomford.jpg"
               alt="man"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="body-new-title">Tom Ford</h3>
+            <p class="body-new-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="body-item">
             <img
               src="./images/camila.jpg"
               alt="woman"
               width="264"
               height="260"
-              />
-              <h3>Camila Garcia</h3>
-              <p>Marketing</p>
-            </li>
-            <li>
+            />
+            <h3 class="body-new-title">Camila Garcia</h3>
+            <p class="body-new-text">Marketing</p>
+          </li>
+          <li class="body-item">
             <img
               src="./images/danielwilson.jpg"
               alt="men"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="body-new-title">Daniel Wilson</h3>
+            <p class="body-new-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="/">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+      <a class="logo link" href="./index.html ">Web<span class="footer-studio link">Studio</span></a>
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
-</html>
+</html>  
