--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <ul class="contact-list list">
         <li class="contact-item">
           <a class="mailto link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a class="phone link" href="tel:+380441111111">+38 044 111 11 11</a>
+          <a class="phone link" href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </header>
@@ -46,27 +46,27 @@
         <ul class="heading-list list">
           <li class="heading-item">
             <h3 class="heading-title">Strategy</h3>
-            <p class="heading-texte">
+            <p class="heading-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
             <li>
               <h3 class="heading-title">Punctuality</h3>
-              <p class="heading-texte">
+              <p class="heading-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li>
               <h3 class="heading-title">Diligence</h3>
-              <p class="heading-texte">
+              <p class="heading-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li>
               <h3 class="heading-title">Technologies</h3>
-              <p class="heading-texte">
+              <p class="heading-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
